# MobileRobots

./: .gitignore  Application.cpp  Application.h  ArtificialIntelligence.cpp  ArtificialIntelligence.h  CMakeLists.txt  CheckComponent.cpp  CheckComponent.h  Chunk.h  Dialogue.cpp  Dialogue.h  Doxyfile  Menue.txt  MobileRobots.cpp  README.md  RobotCommander.h  gen_docs.sh  main.cpp  sfml_main.cpp
Field/: CMakeLists.txt  Cell.cpp  Cell.h  Field.cpp  Field.h  MassiveObstacle.h  MovingObstacle.h  Obstacle.h  PointOfInterest.h
Game/: Application.cpp  Application.h  ArtificialIntelligence.cpp  ArtificialIntelligence.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Dispatcher.h  Drawer.cpp  Drawer.h  Makefile  MobileRobots  View.cpp  View.h  ViewAi.cpp  ViewAi.h  ViewCell.cpp  ViewCell.h  ViewModule.cpp  ViewModule.h  ViewRobot.cpp  ViewRobot.h  sfml_main.cpp  sfml_test  sfml_test.cpp  test  test.cpp
Game/MyGame/Classes/: HelloWorldScene.cpp  HelloWorldScene.h
Game/MyGame/cocos2d/: download-deps.py
Game/MyGame/cocos2d/cocos/network/: SocketIO.h
Game/MyGame/cocos2d/cocos/renderer/backend/: DeviceInfo.h
Interfaces/: CMakeLists.txt  Destroying.h  Moving.cpp  Moving.h  Platform.cpp  Platform.h  Rulling.cpp  Rulling.h
MenueLib/: CMakeLists.txt  Menue.cpp
Modules/: CMakeLists.txt  EnergyGenerator.cpp  EnergyGenerator.h  Gun.cpp  Gun.h  ManageModule.cpp  ManageModule.h  Module.cpp  Module.h  Sensor.cpp  Sensor.h
MyUnorderedMap/: CMakeLists.txt  MyUnorderedMap.h
Presets/: big (2).txt  big.txt
UML/: UML.mdj  UMLsimple.mdj
UML/html-docs/assets/icon-font/: icons.css  icons.html
UML/html-docs/contents/: diagrams.html  element_index.html  navigation.html
UML/reverse_code/Model/: CommandCentre.cpp  CommandCentre.h  Destroying.cpp  Destroying.h  FlyingRobot.cpp  FlyingRobot.h  KamikazeRobot.cpp  KamikazeRobot.h  MobilePlatform.cpp  MobilePlatform.h  Moving.cpp  Moving.h  Platform.cpp  Platform.h  QuantumPlatform.cpp  QuantumPlatform.h  RobotCommander.cpp  RobotCommander.h  RobotDestroyer.cpp  RobotDestroyer.h  Ruling.cpp  Ruling.h
dialogue/: CMakeLists.txt  Menue.h
resources/: base_nicknames.txt
testing/: CMakeLists.txt  Makefile  cover  cover.cpp  cover_dummy.cpp  testing.cpp
utils/: CheckComponent.h
